<resources>
    <string name="app_name">TheVax</string>
    <string name="app_description">Supporto decisionale vaccinale\nin terapia biologica</string>
    <string name="app_disclaimer">Disclaimer: App a scopo dimostrativo/scolastico.</string>
    <string name="login">Accedi</string>
    <string name="register">Registrazione</string>
    <string name="register_button">Registrati</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma password</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Cognome</string>
    <string name="no_account">Non hai un account? Registrati</string>
    <string name="disclaimer">Le indicazioni sono basate su linee guida EULAR 2019 e CDC. Non sostituiscono il parere medico.</string>
    <string name="age">Età</string>
    <string name="sex">Sesso</string>
    <string name="male">Maschio</string>
    <string name="female">Femmina</string>
    <string name="add">+ Aggiungi</string>
    <string name="therapies">Terapie biologiche</string>
    <string name="no_therapies">Nessuna terapia inserita</string>
    <string name="conditions">Condizioni cliniche</string>
    <string name="choice_conditions">Scegli…</string>
    <string name="no_conditions">Nessuna condizione inserita</string>
    <string name="add_therapy">Aggiungi terapia</string>
    <string name="add_condition">Aggiungi condizione</string>
    <string name="therapy_name">Nome del farmaco</string>
    <string name="therapy_category">Categoria della terapia</string>
    <string name="condition_name">Nome della condizione</string>
    <string name="condition_already_added">Condizione già inserita</string>
    <string name="cancel">Annulla</string>
    <string name="logout">Logout</string>
    <string name="none">Nessuna</string>
    <string name="home_loading">Caricamento...</string>
    <string name="home_age_sex">Età: -- | Sesso: --"</string>
    <string name="home_no_therapy">Terapia: Nessuna"</string>
    <string name="home_no_conditions">Condizioni: Nessuna"</string>
    <string name="home_no_vaccines">Nessun vaccino da mostrare per questo profilo"</string>
    <string name="vaccine_plan">PIANO CONSIGLIATO</string>
    <string name="vaccine_title">Prenotazione Vaccino</string>
    <string name="vaccine_info">Nome: --\nTipo: --\nEtà: --</string>
    <string name="vaccine_status">Status Valutazione:</string>
    <string name="vaccine_reccomended">Raccomandati</string>
    <string name="vaccine_optional">Opzionali</string>
    <string name="vaccine_contraindicated">Controindicati</string>
    <string name="vaccine_booking">Prenota</string>
    <string name="vaccine_selected_date">Nessuna data/ora selezionata</string>
    <string name="vaccine_modify">Modifica</string>
    <string name="vaccine_mark_as_complete">Segna come completato</string>
    <string name="vaccine_confirm">Conferma</string>
    <string name="vaccine_cancel">Cancella</string>
    <string name="records_appointments">Appuntamenti</string>
    <string name="records_no_appointments">Nessun appuntamento passato o futuro.</string>
    <string name="profile_patient_data">Dati del paziente</string>
    <string name="profile_first_name">Nome</string>
    <string name="profile_last_name">Cognome</string>
    <string name="profile_age">Età</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Password</string>
    <string name="profile_sex">Sesso</string>
    <string name="sex_male">M</string>
    <string name="sex_female">F</string>
    <string name="profile_save">Salva</string>
    <string name="profile_therapy">Terapia biologica</string>
    <string name="profile_conditions">Condizioni cliniche</string>
    <string name="profile_add_condition">+ Aggiungi</string>
    <string name="profile_no_conditions">Nessuna condizione inserita</string>
</resources>
